--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,16 @@
 [package]
 name = "rust-fun"
 version = "0.1.0"
-authors = ["rgutmann <ralph.gutmann@t-systems.com>"]
+authors = ["rgutmann <ralph.gutmann@gmx.de>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = "0.4"
+chrono = "0.4.19"
 num-format = "0.4.0"
+mini-redis = "0.4.1"
+error-stack = "0.1.1"
+serde = "1.0.137"
+tokio = { version = "1.19.2", features = ["full"] }
+num_cpus = "1.13.1"
