--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ error-stack = "0.1.1"
 serde = "1.0.137"
 tokio = { version = "1.19.2", features = ["full"] }
 num_cpus = "1.13.1"
+chashmap = "2.2.2"
